<resources>
    <string name="app_name">Fire Chat</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_authentication_link">Send Authentication Link</string>
    <string name="about_us">About Us</string>
    <string name="status">Status</string>
    <string name="update">Update</string>
    <string name="title_activity_photo_share">PhotoShareActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>