<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/myWhite">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/fire_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/themeColor"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="32sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/log_in_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/email" />

        <EditText
            android:id="@+id/email_login_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/email"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColorHint="@color/themeColor"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/initial_buttons"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/log_in_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/email_login">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:src="@drawable/password"/>
        <EditText
            android:id="@+id/password_login_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="10dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:textColorHint="@color/themeColor"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/initial_buttons" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/themeColor"
        android:background="@drawable/log_in_edit_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/log_in"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/initial_buttons" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/signup_ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/themeColor"
        android:background="@drawable/log_in_edit_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/login_ll_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/sign_up"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/initial_buttons" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/forgot_password"
        android:textColor="@color/themeColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />
</androidx.constraintlayout.widget.ConstraintLayout>